Generic input rest-api
